--- a/JBB/Base.lproj/Main.storyboard
+++ b/JBB/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="q0l-Hu-e6k">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="q0l-Hu-e6k">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -24,21 +24,22 @@
                                     <rect key="frame" x="0.0" y="0.0" width="383" height="145"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="xbS-1C-9qL">
-                                            <rect key="frame" x="8" y="8" width="335" height="129"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="White Logo" translatesAutoresizingMaskIntoConstraints="NO" id="OcV-Tc-3YX">
-                                                    <rect key="frame" x="0.0" y="0.0" width="157.5" height="129"/>
-                                                </imageView>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="This is a test to show where the text would be on the screen." translatesAutoresizingMaskIntoConstraints="NO" id="42n-gb-4X1">
-                                                    <rect key="frame" x="177.5" y="0.0" width="157.5" height="129"/>
-                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                                    <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                                </textView>
-                                            </subviews>
-                                        </stackView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zdw-2i-cyO">
+                                            <rect key="frame" x="20" y="8" width="151" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="50" id="qma-w0-rHE"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="This is a test to show where the text would be on the screen." translatesAutoresizingMaskIntoConstraints="NO" id="42n-gb-4X1">
+                                            <rect key="frame" x="20" y="66" width="320" height="71"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                            <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        </textView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oNg-ng-HlP">
                                             <rect key="frame" x="348" y="60" width="25" height="25"/>
                                             <constraints>
@@ -53,17 +54,19 @@
                                         </button>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="xbS-1C-9qL" firstAttribute="top" secondItem="WjB-gV-egH" secondAttribute="top" constant="8" id="0QB-Xt-8rO"/>
-                                        <constraint firstAttribute="trailing" secondItem="xbS-1C-9qL" secondAttribute="trailing" constant="40" id="4OK-Hj-y0C"/>
                                         <constraint firstAttribute="trailing" secondItem="oNg-ng-HlP" secondAttribute="trailing" constant="10" id="9bX-09-ILV"/>
                                         <constraint firstItem="oNg-ng-HlP" firstAttribute="centerY" secondItem="WjB-gV-egH" secondAttribute="centerY" id="BNA-KO-5DN"/>
-                                        <constraint firstAttribute="bottom" secondItem="xbS-1C-9qL" secondAttribute="bottom" constant="8" id="HUT-AG-ByT"/>
-                                        <constraint firstItem="xbS-1C-9qL" firstAttribute="leading" secondItem="WjB-gV-egH" secondAttribute="leading" constant="8" id="N0G-be-eTu"/>
+                                        <constraint firstItem="oNg-ng-HlP" firstAttribute="leading" secondItem="42n-gb-4X1" secondAttribute="trailing" constant="8" id="MZY-Z4-Lj2"/>
+                                        <constraint firstItem="Zdw-2i-cyO" firstAttribute="top" secondItem="WjB-gV-egH" secondAttribute="top" constant="8" id="TGW-hR-bV1"/>
+                                        <constraint firstItem="42n-gb-4X1" firstAttribute="top" secondItem="Zdw-2i-cyO" secondAttribute="bottom" constant="8" id="Whh-if-gxc"/>
+                                        <constraint firstItem="Zdw-2i-cyO" firstAttribute="leading" secondItem="WjB-gV-egH" secondAttribute="leading" constant="20" id="cRF-YC-Nf6"/>
+                                        <constraint firstItem="42n-gb-4X1" firstAttribute="leading" secondItem="Zdw-2i-cyO" secondAttribute="leading" id="pEy-dD-hqc"/>
+                                        <constraint firstAttribute="bottom" secondItem="42n-gb-4X1" secondAttribute="bottom" constant="8" id="qJb-K6-9ur"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="articleImageView" destination="OcV-Tc-3YX" id="bCl-lr-gMk"/>
                                     <outlet property="exportButton" destination="oNg-ng-HlP" id="fPc-V9-OZQ"/>
+                                    <outlet property="postTitleLabel" destination="Zdw-2i-cyO" id="x3k-na-Fau"/>
                                     <outlet property="textView" destination="42n-gb-4X1" id="M7P-Hb-N2d"/>
                                 </connections>
                             </tableViewCell>
@@ -77,7 +80,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m2r-On-QiJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-5.625" y="-1125"/>
+            <point key="canvasLocation" x="-5.7971014492753632" y="-1125"/>
         </scene>
         <!--Podcast-->
         <scene sceneID="WgJ-0s-xqu">
@@ -485,7 +488,6 @@
     </scenes>
     <resources>
         <image name="Logo" width="422" height="334"/>
-        <image name="White Logo" width="300" height="256"/>
         <image name="antenna.radiowaves.left.and.right" catalog="system" width="128" height="109"/>
         <image name="list.number" catalog="system" width="128" height="97"/>
         <image name="person" catalog="system" width="128" height="117"/>
