--- a/The JBB/Base.lproj/Main.storyboard
+++ b/The JBB/Base.lproj/Main.storyboard
@@ -18,13 +18,33 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="jw9-MA-g2V" customClass="PostTableViewCell" customModule="The_JBB" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="postCell" rowHeight="127" id="jw9-MA-g2V" customClass="PostTableViewCell" customModule="The_JBB" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="127"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jw9-MA-g2V" id="AlF-zz-1OX">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="127"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="9" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FG4-Ob-non">
+                                            <rect key="frame" x="57" y="21" width="300" height="85"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="300" id="5n1-up-aid"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottomMargin" secondItem="FG4-Ob-non" secondAttribute="bottom" constant="10" id="3Sv-0T-cFI"/>
+                                        <constraint firstItem="FG4-Ob-non" firstAttribute="centerX" secondItem="AlF-zz-1OX" secondAttribute="centerX" id="4eK-Po-dqs"/>
+                                        <constraint firstItem="FG4-Ob-non" firstAttribute="top" secondItem="AlF-zz-1OX" secondAttribute="topMargin" constant="10" id="pGZ-fg-kAj"/>
+                                        <constraint firstItem="FG4-Ob-non" firstAttribute="centerY" secondItem="AlF-zz-1OX" secondAttribute="centerY" id="pi9-Sd-qL2"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="titleLabel" destination="FG4-Ob-non" id="LxY-zO-RQx"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -39,7 +59,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qln-Lb-T3m" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="677" y="366"/>
+            <point key="canvasLocation" x="676.81159420289862" y="365.625"/>
         </scene>
         <!--Post Detail View Controller-->
         <scene sceneID="kTu-wK-e08">
